# JceStruct

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  JCE_PROTOCOL.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: release.yml  testing.yml
docs/: index.md
docs/api/: exceptions.md  fields.md  serialization.md  streams.md  struct.md  type_adapter.md  types.md
docs/usage/: cli.md  conversion_table.md  models.md  serialization.md
jce/: __init__.py  __main__.py  adapter.py  api.py  const.py  context.py  decoder.py  encoder.py  exceptions.py  log.py  options.py  stream.py  struct.py  types.py
jce-core/: pyproject.toml
jce-core/python/jce_core/: __init__.py  _jce_core.pyi
jce-core/src/: lib.rs  reader.rs  serde.rs  stream.rs  writer.rs
python/: AGENTS.md
python/jce/: __init__.py  __main__.py  api.py  config.py  stream.py  struct.py
python/jce/_jce_core/: __init__.pyi
python/tarsio/: __init__.py  adapter.py  api.py  exceptions.py  options.py  stream.py  struct.py
python/tarsio/_core/: __init__.pyi
python/tests/: test_adapter.py  test_api.py  test_cli.py  test_generics.py  test_protocol.py  test_stream.py  test_struct.py
src/: AGENTS.md  lib.rs  reader.rs  serde.rs  stream.rs  writer.rs
src/bindings/: deserializer.rs  exceptions.rs  mod.rs  schema.rs  serde.rs  stream.rs
src/codec/: consts.rs  endian.rs  error.rs  framing.rs  mod.rs  reader.rs  scanner.rs  writer.rs
tests/: test_api.py  test_circular_ref.py  test_cli.py  test_decoder.py  test_generic.py  test_generics.py  test_logging.py  test_stream.py  test_struct.py  test_types.py
