[project]
name = "JceStruct"
version = "0.2.0"
description = "JCE Encode/Decode"
authors = [{ name = "l-1124", email = "68656403+L-1124@users.noreply.github.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["jce"]
dependencies = ["pydantic>=2.0", "typing-extensions>=4.15.0"]

[tool.ruff]
line-length = 80
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I"]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.10"
typeCheckingMode = "standard"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
testing = ["pytest>=9.0.2"]

[tool.hatch.build.targets.wheel]
packages = ["jce"]
